--- a/src/index.html
+++ b/src/index.html
@@ -659,7 +659,7 @@
                 </div>
               </div>
               <div class="overskrift">
-                <h3 class="pt-xxs-spacing-desktop">Solsikke</h3>
+                <h3 itemprop="name" class="pt-xxs-spacing-desktop">Solsikke</h3>
               </div>
             </div>
           </article>
@@ -670,6 +670,7 @@
             </div>
             <div class="overskrift">
               <h3
+                itemprop="name"
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Solsikke
@@ -711,7 +712,7 @@
                 </div>
               </div>
               <div class="overskrift">
-                <h4 class="pt-xxs-spacing-desktop">Fennikel</h4>
+                <h3 itemprop="name" class="pt-xxs-spacing-desktop">Fennikel</h3>
               </div>
             </div>
           </article>
@@ -722,6 +723,7 @@
             </div>
             <div class="overskrift">
               <h3
+                itemprop="name"
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Sweet fennel
@@ -761,7 +763,7 @@
                 </div>
               </div>
               <div class="overskrift">
-                <h3 class="pt-xxs-spacing-desktop">Orkidé</h3>
+                <h3 itemprop="name" class="pt-xxs-spacing-desktop">Orkidé</h3>
               </div>
             </div>
           </article>
@@ -772,6 +774,7 @@
             </div>
             <div class="overskrift">
               <h3
+                itemprop="name"
                 class="mb-xxl-spacing-mobile font-other-headings text-h5-mobile"
               >
                 Okkide
@@ -830,9 +833,11 @@
           Anmeldelser
         </h2>
         <article
+          itemscope
+          itemtype="https://schema.org/Review"
           class="carousel-center carousel h-[200px] overflow-y-hidden overflow-x-scroll lg:mt-xl-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
         >
-          <div class="carousel-item">
+          <div itemprop="review" class="carousel-item">
             <div class="snap-center lg:w-[500px]">
               <figure
                 tabindex="0"
@@ -857,7 +862,7 @@
                   />
                 </svg>
               </figure>
-              <div itemprop="review">
+              <div>
                 <p
                   tabindex="0"
                   class="mx-auto w-1/2 text-center font-font-body text-body-mobile lg:text-body-desktop"
@@ -867,6 +872,7 @@
               </div>
               <div>
                 <p
+                  itemprop="name"
                   tabindex="0"
                   class="pt-l-spacing-mobile text-center font-font-body text-body-mobile"
                 >
@@ -874,7 +880,10 @@
                 </p>
               </div>
             </div>
-            <div class="snap-center lg:-mx-xxl-spacing-desktop lg:w-[500px]">
+            <div
+              itemprop="review"
+              class="snap-center lg:-mx-xxl-spacing-desktop lg:w-[500px]"
+            >
               <figure
                 tabindex="0"
                 class="flex justify-center gap-3 py-l-spacing-mobile"
@@ -900,7 +909,6 @@
               </figure>
               <div>
                 <p
-                  itemprop="review"
                   tabindex="0"
                   class="mx-auto w-1/2 text-center font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -909,6 +917,7 @@
               </div>
               <div>
                 <p
+                  itemprop="name"
                   tabindex="0"
                   class="pt-l-spacing-mobile text-center font-font-body text-body-mobile"
                 >
@@ -916,7 +925,7 @@
                 </p>
               </div>
             </div>
-            <div class="snap-center lg:w-[500px]">
+            <div itemprop="review" class="snap-center lg:w-[500px]">
               <figure
                 tabindex="0"
                 class="flex justify-center gap-3 py-l-spacing-mobile"
@@ -942,7 +951,6 @@
               </figure>
               <div>
                 <p
-                  itemprop="review"
                   tabindex="0"
                   class="mx-auto w-1/2 text-center font-font-body text-body-mobile lg:text-body-desktop"
                 >
@@ -951,6 +959,7 @@
               </div>
               <div>
                 <p
+                  itemprop="name"
                   tabindex="0"
                   class="pt-l-spacing-mobile text-center font-font-body text-body-mobile"
                 >
