--- a/src/blomster.html
+++ b/src/blomster.html
@@ -357,6 +357,7 @@
               <img src="/img/ikoner/fliparrow_ikon.svg" alt="pil ikon" />
             </div>
             <h3
+              itemprop="name"
               class="border-t-color-black bg-color-white pb-s-spacing-mobile text-center font-other-headings text-h5-mobile text-color-black lg:text-h5-desktop"
             >
               Anthurium
@@ -409,6 +410,7 @@
                   alt="pris ikon"
                 />
                 <h4
+                  itemprop="price"
                   class="font-font-body text-body-mobile lg:text-body-desktop"
                 >
                   pris
