--- a/src/blomst_test.html
+++ b/src/blomst_test.html
@@ -230,6 +230,7 @@
 
     <script>
       function myFunction() {
+        console.log("hej");
         var element = document.querySelector(".flip");
         element.classList.toggle("article_info");
       }
