--- a/src/index.html
+++ b/src/index.html
@@ -450,11 +450,18 @@
       >
         <div class="lg:grid lg:grid-cols-2 lg:border-2 lg:border-sol-300">
           <figure
-            class="lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile"
+            class="illustration_bb lg:grid-cols-1 lg:border-r-2 lg:border-sol-300 lg:px-s-spacing-mobile"
           >
             <img
+              id="bb_blink"
               class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
               src="img/logo/bb_ill_sol.png"
+              alt="Blomster Bjarne illustration"
+            />
+            <img
+              id="bb_ikke_blink"
+              class="mx-auto w-[300px] pt-xs-spacing-mobile lg:w-[400px] lg:pt-s-spacing-mobile"
+              src="img/logo/bb_ill_sol_blink.png"
               alt="Blomster Bjarne illustration"
             />
           </figure>
@@ -835,7 +842,7 @@
         <article
           itemscope
           itemtype="https://schema.org/Review"
-          class="carousel-center carousel h-[200px] overflow-y-hidden overflow-x-scroll lg:mt-xl-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
+          class="carousel-center carousel h-[235px] overflow-y-hidden overflow-x-scroll lg:mt-xl-spacing-desktop lg:h-[300px] lg:place-content-center lg:overflow-x-hidden"
         >
           <div itemprop="review" class="carousel-item">
             <div class="snap-center lg:w-[500px]">
